Add Convert page

--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\convert.png" />
+    <None Remove="Images\exchange-rate.png" />
     <None Remove="Images\search.png" />
   </ItemGroup>
 
@@ -28,6 +29,7 @@
     <Resource Include="Images\convert.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Images\exchange-rate.png" />
     <Resource Include="Images\search.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
